--- a/stories/ar/0052_سمبقواير_slides.html
+++ b/stories/ar/0052_سمبقواير_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>سمبقواير - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1 dir="rtl">الدجاجة والنسر</h1>
+<section id="سمبقواير" class="slide level1">
+<h1 dir="rtl">سمبقواير</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p dir="rtl">في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p dir="rtl">توفيت أم سمبقواير، فحزنت البنت حزنا شديدا. فعل أبوها كل ما في وسعه للعناية بها، فبدآ رويدا رويدا يسترجعان معا شعورهما بالفرح رغم غياب الأم. كانا يجلسان كل صباح ويتناقشان فيما سيفعلانه خلال اليوم. وفي المساء، كانا يحضران العشاء معا ويغسلان الأطباق ثم يقوم أب سمبقواير بمساعدتها في القيام بفروضها المنزلية.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p dir="rtl">في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p dir="rtl">وفي يوم من الأيام، عاد أب سمبقواير إلى المنزل متأخرا على غير عادته وهتف:&quot; أين أنت صغيرتي؟&quot;. أسرعت سمبقواير لاستقبال أبيها غير أنها توقفت فجأة عند ما رأت والدها يمسك بيد امرأة لا تعرفها. قال الأب مبتسما: &quot;صغيرتي، أريدك أن تلتقي بشخص مميز ... هذه أنيتا&quot;.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p dir="rtl">بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p dir="rtl">قالت أنيتا: &quot; أهلا سمبقواير. لقد حدثني أبوك عنك كثيرا &quot;، غير أنها لم تبتسم ولم تمسك بيد سمبقواير. وكان أب سمبقواير فرحا متحمسا، يتحدث عن حياتهم الثلاثة معا وكيف أنها ستكون رائعة وسعيدة. ثم أضاف: &quot; صغيرتي، أرجو أن تقبلي أنيتا كأم لك&quot;.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p dir="rtl">كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p dir="rtl">تغيرت حياة سمبقواير ولم يعد لديها الوقت لتجلس لأبيها كل صباح. فقد كانت أنيتا تكلفها بأعمال منزلية كثيرة ترهقها وتمنعها من القيام بواجباتها المدرسية عند المساء. لذلك كانت سمبقواير تنام مباشرة بعد إنهاء الأعمال المنزلية. كان عزاءها الوحيد غطاء ملون منحتها إياه أمها قبل وفاتها. أما الأب فلم يكن باديا عليه أنه لاحظ حزن ابنته.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك أصبحت هناك طيور تحلق في السماء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p dir="rtl">وبعد بضعة أشهر أعلم الأب زوجته وابنته أنه سيبتعد لبعض الوقت. قال لهما:&quot; سأسافر للقيام ببعض الأعمال. لكنني على ثقة من أنكما ستعتنيان ببعضكما.&quot; تغير وجه سمبقواير لكن أباها لم يلحظ ذلك. أنيتا أيضا لم تكن سعيدة بهذا الخبر لكنها لم تنبس بكلمة.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p dir="rtl">عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p dir="rtl">تدهورت حياة سمبقواير، فقد كانت أنيتا تضربها كلما اشتكت أو أنها لم تتمكن من إنهاء العمل الذي كلفتها به. أما عند العشاء فقد كانت أنيتا تستأثر لنفسها بالكمية الأكبر من الأكل ولا تترك لسمبقواير غيرالفُتاة. كانت سمبقواير تنام كل ليلة باكية، محتضنة الغطاء الذي أهدتها إياه أمها.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p dir="rtl">في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p dir="rtl">وفي إحدى الأيام استيقظت سمبقواير متأخرة فصرخت أنيتا بوجهها: &quot;أنت ... أيتها البنت الكسولة &quot; ودفعتها بقوة خارج السرير فعلق الغطاء الثمين بمسمار وتمزق إلى نصفين.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p dir="rtl">&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p dir="rtl">غضبت سمبقواير غضبا شديدا وقررت الهروب من المنزل. فأخذت جُزْءَيْ الغطاء وبعضا من الطعام وغادرت المنزل متبعة الطريق التي سلكها أبوها.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p dir="rtl">عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p dir="rtl">عندما أقبل المساء، تسلقت الفتاة شجرة باسقة على ضفة نهر وجعلت لنفسها سريرا بين أغصانها وبدأت تغني وهي تستعد للنوم: &quot; ما ما، ماما، ماما، لقد تركتني ... تركتني ولن تعودي أبدا. أبي لم يعد يحبني. ماما متى ستعودين؟&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p dir="rtl">كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p dir="rtl">ومن الغد غنت سمبقواير نفس الأغنية من جديد عندما كان بعض النسوة يغسلن الثياب بماء النهر. ولما سمعن الأغنية الحزينة تَصِلُهنَّ من أعلى الشجرة، ظنن أنها لا تعدو أن تكون وشوشة الريح في أوراق الشجرة وواصلن عملهن متجاهلات ما سمعن. لكن إحداهن استمعت إلى الأغنية بانتباه شديد.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,66 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p dir="rtl">رفعت المرأة نظرها إلى أعلى الشجرة، وعندما رأت الفتاة وقطعتَيْ الغطاء الملونتين صاحت: &quot;سمبقواير ... ابنة أخي!&quot;. توقفت بقية النساء عن غسل الثياب وساعدن سمبقواير على النزول من أعلى الشجرة. عانقت العمة الطفلة الصغيرة وحاولت مواساتها.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p dir="rtl">أخذت العمة الصغيرة معها إلى منزلها وقدمت لها طعاما ساخنا ووضعتها في سرير لتنام وغطاء أمها معها. ليلتها بكت سمبقواير قبل أن تنام لكنها كانت دموع فرح وسعادة، إذ أنها أدركت بأن عمتها سوف تعتني بها.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p dir="rtl">عندما عاد أب سمبقواير إلى المنزل، وجد غرفتها خالية. انزعج الأب وسأل أنيتا عن ابنته وقلبه مثقل بالحزن:&quot; أنيتا، ما الذي حصل؟ &quot;. أجابت أنيتا بأن سمبقواير قد هربت من المنزل، مضيفة:&quot; كنت أريدها أن تحترمني: لكن أظن أنني قد قسوت عليها بعض الشيء&quot;. غادر الأب البيت مسرعا في اتجاه النهر، وواصل طريقه نحو بيت أخته، أملا في أن تكون قد رأت سمبقواير.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p dir="rtl">كانت سمبقواير تلعب مع أبناء عمتها عندما رأت أباها مقبلا من بعيد. أصابها ذعر شديد من أن يكون غاضبا منها فأسرعت بالاختباء داخل المنزل. لكن أباها أسرع إليها قائلا: &quot;عزيزتي سمبقواير، لقد وجدتِ أما رائعة لك ... تحبك وتفهمك، أحبك صغيرتي وأنا فخور بك&quot;. اتفق الجميع على أن تظل سمبقواير مع عمتها طالما أرادت ذلك.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p dir="rtl">كان أبوها يزورها كل يوم. وأخيرا اصطحب معه أنيتا إلى منزل أخته. ا أمسكت أنيتا بيد سمبقواير هذه المرة وقالت باكية:&quot; سامحيني صغيرتي، لقد أخطأت في حقك، هلا منحتني فرصة أخرى؟&quot;. نظرت سمبقواير إلى أبيها فرأت قلقا يعلو وجهه. فتقدمت ببطء نحو أنيتا وأحاطتها بذراعيها.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p dir="rtl">ومن الغد، دعت أنيتا سمبقواير وعمتها وأبناء عمتها إلى وجبة غذاء بمنزلها. كانت مأدبة رائعة، إذ أن أنيتا أعدت كل الأطباق التي تحبها سمبقواير. أكل الجميع حد التخمة وانغمس الأطفال في اللعب بينما انصرف الكبار يتجاذبون أطراف الحديث. شعرت سمبقواير بالفرح وبالشجاعة وقررت أن تعود قريبا جدا للعيش مع أبيها وزوجة أبيها في منزل العائلة</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="سمبقواير-1">سمبقواير</h2>
+<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/simbegwire'>here</a>
 <p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
