--- a/stories/ar/0066_نوزيبال-والشعرات-الثلاث_slides.html
+++ b/stories/ar/0066_نوزيبال-والشعرات-الثلاث_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>نوزيبال والشعرات الثلاث - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1 dir="rtl">الدجاجة والنسر</h1>
+<section id="نوزيبال-والشعرات-الثلاث" class="slide level1">
+<h1 dir="rtl">نوزيبال والشعرات الثلاث</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p dir="rtl">في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p dir="rtl">يحكى في قديم الزمان أن ثلاث فتيات قصدن الغابة لجمع الحطب.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p dir="rtl">في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p dir="rtl">كان اليوم حارا فنزلت الفتيات الثلاثة إلى النهر ليستحممن. فلعبن وسبحن ونثرن الماء هنا وهناك.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p dir="rtl">بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p dir="rtl">وفجأة انتبهن إلى أن الوقت قد تأخر بهن فأسرعن بالعودة إلى القرية.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p dir="rtl">كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p dir="rtl">وعندما شارفن على بلوغ منازلهن رفعت نوزيبال يدها إلى رقبتها فتفطنت إلى أنها نسيت عقدها عند النهر. توسلت نوزيبال إلى صديقتيها بأن يرجعا معها إلى هناك لكنهما رفضتا لأن الوقت كان متأخرا.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك أصبحت هناك طيور تحلق في السماء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p dir="rtl">رجعت نوزيبال بمفردها إلى النهر. وجدت عقدها هناك فأخذته وقفلت مسرعة إلى البيت. غير أنها أضاعت طريقها لأن الظلام كان قد أسدل ستاره على المكان.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p dir="rtl">عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p dir="rtl">رأت نوزيبال ضوءا ينبعث من كوخ من بعيد فأسرعت إلى الكوخ وطرقت الباب.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p dir="rtl">في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p dir="rtl">وكم كانت مفاجأتها كبيرة عندما فتح الباب كلب وقال لها: &quot;ماذا تريدين؟&quot; أجابت نوزيبال:&quot; لقد أضعت طريقي وأنا بحاجة لمكان أنام فيه&quot;. فقال الكلب: &quot;ادخلي، وإلا قمت بعضك&quot;. فدخلت نوزيبال الكوخ.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p dir="rtl">&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p dir="rtl">ثم قال الكلب: &quot;هيا اطبخي لي طعاما&quot;، أجابت نوزيبال: &quot;أنا لم أطبخ لكلب قط من قبل &quot;، لكن الكلب أصر:&quot;هيا...اطبخي وإلا قمت بعضك&quot;. انصاعت نوزيبال لأمر الكلب وطبخت له طعاما.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p dir="rtl">عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p dir="rtl">ثم قال الكلب: &quot;رتبي لي فراشي&quot;. أجابت نوزيبال:&quot;لكني لم أرتب فراشا لكلب قط من قبل&quot;. أصر الكلب: &quot;حضري لي الفراش وإلا عضضتك&quot;. عندها رتبت نوزيبال له الفراش.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p dir="rtl">كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p dir="rtl">وأصبحت نوزيبال تطبخ وتكنس وتغسل للكلب كل يوم. وذات يوم من الأيام، قال الكلب لنوزيبال:&quot; نوزيبال، سأذهب اليوم لزيارة بعض الأصدقاء، عليك أن تكنسي المنزل وتطبخي الطعام وتغسلي ثيابي قبل أن أعود&quot;.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,39 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p dir="rtl">وبمجرد أن غادر الكلب الكوخ، قطعت نوزيبال ثلاث شعرات من رأسها ووضعت واحدة تحت السرير وواحدة وراء الباب وواحدة على سور الكوخ وجرت مسرعة إلى بيتها.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p dir="rtl">وعندما رجع الكلب إلى كوخه طفق يبحث عن نوزيبال: &quot;نوزيبال، أين أنت&quot;؟ أجابت الشعرة الأولى:&quot; أنا هنا، تحت السرير&quot;، وقالت الشعرة الثانية: &quot;أنا هنا وراء الباب&quot;. وقالت الشعرة الثالثة: &quot;أنا هنا على سور الكوخ&quot;.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p dir="rtl">عندها عرف الكلب أن نوزيبال قد خدعته، فانطلق مسرعا نحو القرية، لكن إخوة نوزيبال كانوا بانتظاره وبأيديهم عصا غليظة. خاف الكلب فرجع أدراجه وأطلق أقدامه للريح ولم يره أحد منذ ذلك اليوم.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="نوزيبال-والشعرات-الثلاث-1">نوزيبال والشعرات الثلاث</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
