--- a/stories/ar/0158_الدجاجة-والنسر.html
+++ b/stories/ar/0158_الدجاجة-والنسر.html
@@ -77,7 +77,7 @@ Ann Nduku<br>العربية</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
 
-<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
+<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك أصبحت هناك طيور تحلق في السماء.</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
