--- a/stories/ar/0243_في-عطلة-مع-الجدة_slides.html
+++ b/stories/ar/0243_في-عطلة-مع-الجدة_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>في عطلة مع الجدة - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1 dir="rtl">الدجاجة والنسر</h1>
+<section id="في-عطلة-مع-الجدة" class="slide level1">
+<h1 dir="rtl">في عطلة مع الجدة</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p dir="rtl">في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
+<p dir="rtl">كان أودنقور وأبيو يعيشان مع أبيهما في المدينة، وكانا ينتظران العطلة بفارغ الصبر، ليس فقط لأن المدرسة ستغلق أبوابها ولكن أيضا لأنهما يريدان زيارة جدتهما التي كانت تعيش في قرية صيد محاذية لبحيرة كبيرة.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p dir="rtl">في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
+<p dir="rtl">كان أودنقور وأبيو متحمسين أشد الحماس لأن الوقت قد حان لزيارة جدتهما من جديد. وفي الليلة التي سبقت الزيارة، حزم الصغيران حقائبهما واستعدا للرحلة الطويلة التي ستأخذهما إلى قرية جدتهما. لم يستطيعا ليلتها النوم، ولبثا يتحدثان عن العطلة طوال الليل.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p dir="rtl">بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
+<p dir="rtl">وفي صباح اليوم الموالي، امتطى الصغيران سيارة أبيهما وقصدا القرية باكرا. كانت السيارة تشق طريقها عبر الجبال وبين الحيوانات البرية ومزارع الشاي، وكان الصغيران يحصيان عدد السيارات ويغنيان.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p dir="rtl">كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
+<p dir="rtl">لكن وبعد فترة من الوقت، شعر الصغيران بالتعب وغلبهما النعاس فاستسلما للنوم.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك أصبحت هناك طيور تحلق في السماء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
+<p dir="rtl">أيقظ الأب الطفلين أودنقو وأبيو لدى وصولهما إلى القرية. وجد الصغيران جدتهما، نيار كنيادا، تستريح على حصير تحت شجرة. كان اسمها بلغة الليو يعني &quot; ابنة شعب كنيادا&quot; وكانت امرأة جميلة وقوية.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p dir="rtl">عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
+<p dir="rtl">استقبلتهما الجدة بحفاوة في منزلها ورقصت وغنت من شدة الفرح. كان الحفيدان مغتبطين بإعطاء جدتهما الهدايا التي اشتروها لها من المدينة. قال أودنقو: &quot;جدتي..افتحي هديتي أنا أولا &quot;. وقالت ابيو: &quot;لا جدتي، هديتي أنا أولا&quot;.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p dir="rtl">في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
+<p dir="rtl">وبعد أن فتحت نيار كنيادا الهدايا، شكرت حفيديها وباركتهما على الطريقة التقليدية.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p dir="rtl">&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
+<p dir="rtl">بعد ذلك، خرج اودنقو وابيو إلى الحقول فلاحقا الفراشات والطيور.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p dir="rtl">عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
+<p dir="rtl">وتسلقا الأشجار واستحما في ماء البحيرة.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p dir="rtl">كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
+<p dir="rtl">ولما أقبل المساء رجعا إلى المنزل ليتناولا العشاء. لكن قبل أن ينهيا طعامهما كان الصغيران قد غلبهما النعاس فناما.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,102 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
+<p dir="rtl">وفي اليوم الموالي انطلق الأب بسيارته إلى المدينة وترك الصغيرين صحبة جدتهما نيار كنيادا.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
+<p dir="rtl">ساعد أودنقو وأبيو جدتهما في شؤون المنزل، فكانا يحضران الماء والحطب ويجمعان البيض من قن الدجاج ويلتقطان الخضار من الحديقة.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
+<p dir="rtl">علمت نيار كنيادا حفيديها كيفية صنع الأوقالي اللين لتناوله مع الحساء، كما علمتهما كيفية صنع رز جوز الهند لتناوله مع السمك المحمر.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
+<p dir="rtl">وفي صباح أحد الأيام، أخذ أودنقو بقرات جدته إلى المرعى، فأسرعت البقرات بالدخول إلى حقل أحد المزارعين. غضب المزارع من أدنقو وهدد بأن يحتفظ بالبقرات عنده لأنها أكلت محصوله. ومنذ ذلك اليوم، عزم الولد على ألا يترك البقرات تتسبب في أي مشكل جديد.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
+<p dir="rtl">وفي يوم آخر، ذهب الصغيران مع نيار كنيادا إلى التسوق. كانت الجدة تضع الخضار والسكر والصابون على منصة لبيعها وكانت أبيو تعلم الزبائن بثمن السلع. أما أودنقو فقد كان يلف المشتريات للزبائن.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
+<p dir="rtl">وفي نهاية اليوم شربوا شاي تشاي معا وساعدوا الجدة في حساب المال الذي حصلت عليه.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
+<p dir="rtl">غير أن العطلة انتهت بسرعة، وكان لزاما على الصغيرين الرجوع إلى المدينة. أهدت نيار كنيادا قبعة لأودنقو وسترة لأبيو، كما أعدت لهم طعاما من أجل الرحلة.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
+<p dir="rtl">وعندما جاء أبوهما لاصطحابهما معه إلى المنزل، لم يريدا المغادرة، بل رجوا نيار كنيادا أن تذهب معهما إلى المدينة. ابتسمت الجدة وقالت: &quot;لقد أصبحت عجوزا، ولن أستطيع الذهاب إلى المدينة. سوف أنتظر حتى تعودا إلى قريتي من جديد&quot;.</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
+<p dir="rtl">عانق أودنقو وأبيو جدتهما بحرارة وودعاها.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
+<p dir="rtl">ولما عاد أودنقو وأبيو إلى المدرسة، حدثا أصدقائهما عن الحياة في القرية. أحس بعض الأطفال أن الحياة في المدينة جميلة بينما أحس البعض الآخر أنها أجمل في القرية. لكنهم اتفقوا جميعا على ان لأدنقو وأبيو جدة رائعة.</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="في-عطلة-مع-الجدة-1">في عطلة مع الجدة</h2>
+<strong>Text:</strong> Violet Otieno<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/holidays-grandmother'>here</a>
 <p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
