--- a/stories/ar/0294_موز-جدتي_slides.html
+++ b/stories/ar/0294_موز-جدتي_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>موز جدتي - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1 dir="rtl">الدجاجة والنسر</h1>
+<section id="موز-جدتي" class="slide level1">
+<h1 dir="rtl">موز جدتي</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p dir="rtl">في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p dir="rtl">كانت لجدتي حديقة رائعة تملأها الذرة الرفيعة والدخن والكسافا، ولكن شجيرات الموز كانت أجمل ما في الحديقة. وكان لجدتي أحفادا كثيرين، إلا أنني كنت على يقين من أنني كنت المفضلة لديها. كانت تدعوني دوما إلى منزلها وكانت تودعني أسرارها الصغيرة، غير أن لجدتي سرا تخفيه عني ولا ترغب في إطلاعي عليه، ألا وهو المكان الذي تقوم فيه بإنضاج الموز.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p dir="rtl">في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p dir="rtl">وفي يوم من الأيام، رأيت سلة كبيرة من السعف قد عرضت لحرارة الشمس خارج منزل جدتي. ولما سألتها لما تستعمل تلك السلة، كان جوابها الوحيد:&quot; إنها سلتي السحرية&quot;. وكان بجانب السلة مجموعة من الأوراق التي كانت جدتي تقلبها من حين لأخر. ازداد فضولي وسألتها:&quot; فيما تستعملين هذه الأوراق، يا جدتي؟ &quot; وكان جوابها الوحيد أيضا:&quot; إنها أوراقي السحرية&quot;.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p dir="rtl">بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p dir="rtl">وكم كنت يومها مستمتعة بمشاهدة جدتي وموزات جدتي وأوراق الموز وسلة السعف. لكن جدتي قررت أن تبعثني لقضاء أمر ما لدى أمي. توسلت إليها:&quot; أرجوك جدتي، دعيني أشاهدك وأنت تحضرين ...&quot; لكنها قاطعتني، وأصرت:&quot; لا تكوني عنيدة صغيرتي. هيا، افعلي ما أمرتك به &quot;. فانطلقت جريا نحو أمي.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p dir="rtl">كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p dir="rtl">ولما رجعت، وجدت جدتي جالسة خارج المنزل ولم يكن هناك لا سلة ولا موز. سألتها:&quot; جدتي، أين السلة وأين الموز، وأين ...؟&quot;. وكان جوابها الوحيد:&quot; إنهم في مكاني السحري&quot;. وكم كان ذلك محبطا لي.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك أصبحت هناك طيور تحلق في السماء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p dir="rtl">وبعد يومين، طلبت مني جدتي أن أحضر لها عصا المشي من بيت نومها. وبمجرد أن فتحت الباب، استقبلتني رائحة الموز الناضج. لقد كانت سلة جدتي السحرية في الغرفة الداخلية، مخبأة جيدا تحت غطاء قديم. رفعت الغطاء واستنشقت تلك الرائحة الرائعة.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p dir="rtl">عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p dir="rtl">لكن صوت جدتي فاجئني عندما نادتني:&quot; ماذا تفعلين؟ أسرعي وأحضري لي العصا&quot;. أسرعت بعصا المشي لجدتي، فسألتني:&quot; لماذا تبتسمين؟&quot; جعلني سؤالها أتفطن إلى أنني لازلت مبتسمة لاكتشافي مكان موزات جدتي السحري.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p dir="rtl">في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p dir="rtl">وفي اليوم الموالي، عندما ذهبت جدتي لزيارة أمي أسرعت إلى منزلها لتفقد الموز مرة أخرى. وكانت هناك مجموعة من حبات الموز قد اكتمل نضجها. التقطت واحدة وأخفيتها تحت ثيابي. وبعد أن أرجعت غطاء السلة من جديد، ذهبت خلف المنزل والتهمت الموزة بسرعة. كانت تلك ألذ موزة أتذوقها في حياتي.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p dir="rtl">&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p dir="rtl">ومن الغد، وبينما كانت جدتي في الحديقة تجمع الخضار، تسللت إلى المنزل واسترقت النظر للموز. كانت كل الموزات تقريبا قد نضجت، ولم أستطع أن أمسك نفسي عن أخذ أربع حبات من الموز. وبينما كنت متجهة نحو الباب على أطراف أصابعي، إذ بي أسمع سعال جدتي بالخارج. وبالكاد نجحت في إخفاء حبات الموز تحت فستاني ثم تجاوزت جدتي في المشي.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p dir="rtl">عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p dir="rtl">كان اليوم الموالي هو يوم السوق الأسبوعية. استيقظت جدتي باكرا، فقد كانت دائما تأخذ الموز والكسافا لتبيعها في السوق. لم أسارع يومها لزيارتها كالعادة، لكنني كنت أعرف أنني لن أستطيع تحاشيها طويلا.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p dir="rtl">كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p dir="rtl">وفي ساعة متأخرة من تلك الليلة، دعاني أبي وأمي للحديث معي. كنت أعرف لماذا دعونني. وهكذا، وبينما كنت مستلقية للنوم في تلك الليلة، عرفت أنني لا يجب أن أسرق ثانية أبدا، لا من جدتي ولا من والديَّ ولا من أي إنسان آخر.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<h2 id="موز-جدتي-1">موز جدتي</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
 <p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
