--- a/stories/ar/0201_صغير-الحمار_slides.html
+++ b/stories/ar/0201_صغير-الحمار_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>صغير الحمار - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1 dir="rtl">الدجاجة والنسر</h1>
+<section id="صغير-الحمار" class="slide level1">
+<h1 dir="rtl">صغير الحمار</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p dir="rtl">في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
+<p dir="rtl">كانت الفتاة الصغيرة هي أول من رأى الشبح الغامض قادما من بعيد.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p dir="rtl">في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
+<p dir="rtl">وباقتراب الشكل الغامض منها، تبينت الفتاة بأنه شبح امرأة حامل.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p dir="rtl">بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
+<p dir="rtl">تقدمت الفتاة نحو المرأة واقتربت منها، ببعض الخجل لكن بكل شجاعة. قال أهل الفتاة:&quot; علينا أن نحتفظ بهذه المرأة بيننا. سوف نقوم بحمايتها هي وصغيرها&quot;.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p dir="rtl">كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
+<p dir="rtl">وبعد مدة وجيزة حان موعد ولادة الصغير. قالت نساء القرية: &quot; هيا ادفعي ... هات الغطاء .... هات الماء...... ادفعيييييييي ....&quot;.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك أصبحت هناك طيور تحلق في السماء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
+<p dir="rtl">لكن، وعندما رأت النسوة المولود قفزن إلى الوراء من هول الصدمة &quot;حمار&quot; !! &quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p dir="rtl">عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
+<p dir="rtl">بدأت النسوة يتجادلن حول المولود الجديد. البعض قلن بأنهن سوف يحتفظن بالمولود وأمه لأنهن وعدنها بذلك، بينما تخوف البعض الأخر من أنهما قد يكونا نذير شؤم على القرية.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p dir="rtl">في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
+<p dir="rtl">وهكذا وجدت المرأة نفسها وحيدة من جديد، تسأل نفسها في حيرة عما يمكن أن تفعله بهذا الطفل الأخرق وبنفسها.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p dir="rtl">&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
+<p dir="rtl">وانتهى بها التفكير إلى قبول الأمر، فهذا الحمار ابنها وهي الآن أمه.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p dir="rtl">عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
+<p dir="rtl">ولو أن الجحش حافظ على حجمه الصغير لاختلف الأمر. لكن الجحش بدأ يكبر ويكبر حتى لم يعد بإمكان الأم حمله على ظهرها. وكان غير قادر على أن يسلك سلوك الآدميين مهما فعل ومهما حاول ذلك. أحست الأم بالتعب والإحباط، وكانت تكلفه أحيانا بأعمال يقوم بها الحيوانات.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p dir="rtl">كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
+<p dir="rtl">نما بداخل الحمار شعور بالغضب والارتباك. إذ هو لا يعرف ما يفعله ولا من يكون ولا كيف يكون. وفي يوم من الأيام، بلغ الغضب بالحمار منتهاه لدرجة انه ركل أمَّه وأوقعها أرضا.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,102 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
+<p dir="rtl">شعر الحمار بعدها بالخجل الشديد لما بدر منه في حق أمه وانبرى هاربا بعيدا.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
+<p dir="rtl">ولما توقف عن الجري، كان الظلام قد أرخى سدوله على المكان فإذا بالحمار يضيع طريقه وإذا به يهمس للظلام: &quot; هييه ..هاو؟&quot; ويردد رجع الصدى: &quot;هييه ...هاو؟&quot;. وجد الحمار نفسه وحيدا فتكوم على نفسه وخلد إلى نوم عميق مضطرب.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
+<p dir="rtl">وعندما استفاق من نومه، وجد شيخا غريبا واقفا عند رأسه محدقا فيه. نظر الحمار في عيني الشيخ وبدأ يشعر ببصيص من الأمل.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
+<p dir="rtl">انتقل الحمار للعيش مع الشيخ، فعلمه أساليب عديدة للعيش. استمع الاثنان إلى بعضهما وتعلما الكثير من بعضهما وتعاونا وضحكا كثيرا معا.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
+<p dir="rtl">وفي صباح أحد الأيام، طلب الشيخ من الحمار أن يحمله إلى قمة الجبل.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
+<p dir="rtl">وهناك بين السحب، خلد الاثنان إلى النوم. حلم الحمار بأن أمه مريضة وبأنها تناديه. وعندما استفاق من نومه،</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
+<p dir="rtl">وجد الغيوم قد اختفت، وكذا صديقه الشيخ.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
+<p dir="rtl">عندها، عرف الحمار ما يجب عليه فعله.</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
+<p dir="rtl">ولدى رجوعه إلى البيت وجد أمه وحيدة ترثي ابنها المفقود. حدق الإثنان في بعضهما لفترة طويلة ثم عانق كل منهما الآخر عناقا حارا.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
+<p dir="rtl">كبر الحمار وأمه معا ووجدا لنفسيهما سبلا عديدة للتعايش في سلام جنبا إلى جنب. وشيئا فشيئا، بدأت عائلات أخرى تستقر حول الحمار وأمه.</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="صغير-الحمار-1">صغير الحمار</h2>
+<strong>Text:</strong> Lindiwe Matshikiza<br> <strong>Illustrations:</strong> Meghan Judge<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/donkey-child'>here</a>
 <p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
