--- a/stories/ar/0262_ماقزوي_slides.html
+++ b/stories/ar/0262_ماقزوي_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>ماقزوي - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1 dir="rtl">الدجاجة والنسر</h1>
+<section id="ماقزوي" class="slide level1">
+<h1 dir="rtl">ماقزوي</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p dir="rtl">في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
+<p dir="rtl">في مدينة نيروبي الصاخبة، بعيدا عن الحياة العائلية ودفئها، يعيش مجموعة من الصبيان بدون مأوى. كانوا يستقبلون كل يوم كما يأتي، لا أمل لهم فيه. وفي صباح أحد الأيام، أخذ الأطفال يحزمون حصائرهم بعد النوم على الأرصفة الباردة، ثم أشعلوا نارا مما وجدوه من قمامة لمقاومة البرد. كان ماقزوي أحد هؤلاء الصبيان وكان أصغرهم سنا.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p dir="rtl">في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
+<p dir="rtl">كان ماقزوي يبلغ من العمر خمس سنوات عندما توفي والداه، فانتقل للعيش مع خاله. لكن هذا الرجل لم يكترث بالطفل ولم يوفر له القدر الكافي من الطعام كما كان يجبره على القيام بأعمال شاقة.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p dir="rtl">بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
+<p dir="rtl">وكان أيضا يضربه كلما استفسر ماقزوي عن أمر أو تذمر من كثرة العمل. وعندما طلب ماقزوي من خاله أن يسمح له بالذهاب إلى المدرسة ضربه من جديد قائلا: &quot;أنت غبي جدا ولن تتعلم أي شيء&quot;. وبعد ثلاث سنوات من هذه المعاملة القاسية، هرب ماقزوي من خاله وبدأ يعيش في الشارع.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p dir="rtl">كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
+<p dir="rtl">كانت الحياة في الشارع صعبة وكان أغلب الأطفال يعانون يوميا من أجل لقمة العيش. فكانت الشرطة تلقي عليهم القبض أحيانا، وأحيانا أخرى كانوا يتعرضون للضرب. وكانوا إذا ما مرضوا لا يجدون من يقدم لهم يد المساعدة. كانت مجموعة الأطفال تعتمد على النزر القليل من المال الذي كانوا يحصلون عليه من التسول ومن بيع البلاستيك ومواد أخرى مما تقع رسكلته. كانت الحياة تزداد صعوبة خاصة بسبب المعارك التي تحدث بين جماعات الأطفال المتنافسة من أجل السيطرة على أحياء المدينة.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك أصبحت هناك طيور تحلق في السماء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
+<p dir="rtl">وفي يوم من الأيام، بينما كان ماقزوي يبحث في صناديق القمامة عن شيء يأكله، إذ به يجد مجموعة قصص رثة ممزقة. قام ماقزوي بتنظيف القصص من الأوساخ ووضعها في جرابه. وكان كل يوم يخرج الكتاب من كيسه وينظر إلى الصور، إذ لم يكن ماقزوي يعرف قراءة الكلمات.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p dir="rtl">عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
+<p dir="rtl">كانت الصور تحكي قصة طفل نشأ ليكون طيارا. أصبح ماقزوي يمضي يومه حالما بأن يكون طيارا، وكان من حين لآخر يرى نفسه مكان ذاك الولد الذي تصفه الصور.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p dir="rtl">في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
+<p dir="rtl">كان الجو باردا وكان ماقزوي يقف متسولا في الطريق عندما تقدم إليه رجل قائلا: &quot;أهلا... أنا توماس. أعمل قريبا من هنا، في مكان يمكن أن تجد فيه شيئا تأكله&quot;. وأشار بإصبعه إلى منزل أصفر ذي سقف أزرق، وسأل ماقزوي: &quot;ألا ترغب في الذهاب إلى هناك لتناول بعض الطعام؟&quot;. نظر ماقزوي إلى الرجل ثم إلى المنزل وقال: &quot;ربما&quot; وانصرف بعيدا.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p dir="rtl">&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
+<p dir="rtl">توالت الأشهر بعد ذلك، وتعود الأولاد المشردون على رؤية توماس يرتاد المكان الذي يتواجدون فيه. كان يحب الحديث إلى الناس، وخاصة من كانوا يعيشون في الشوارع. كان يستمع إلى قصص حياتهم. وكان جديا، صبورا، ولم يكن قاسيا أبدا ولا قليل الاحترام لهم. بدأ بعض الصبيان يترددون على المنزل ذي اللونين الأصفر والأزرق للحصول على ما يسد رمقهم عند منتصف النهار.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p dir="rtl">عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
+<p dir="rtl">كان ماقزوي يوما ما جالسا على الرصيف يتأمل كتاب الصور عندما جلس توماس لجانبه وسأله: &quot;عما تحكي هذه القصة؟&quot;. أجاب ماقزوي:&quot;عن ولد أصبح طيارا&quot;. قال توماس: &quot;ما اسم هذا الولد؟&quot; أجاب ماقزوي بهدوء: &quot;لا أعرف. لا أستطيع القراءة&quot;.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p dir="rtl">كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
+<p dir="rtl">عندما تقابلا، بدأ ماقزوي يسرد قصته على توماس، قصته مع خاله وكيف هرب منه. لم يتكلم توماس كثيرا، ولم يُمْلِ على ماقزوي ما يجب عليه فعله، لكنه كان يصغي إليه بانتباه طوال الوقت. وكانا أحيانا يواصلان حديثهما بينما يتناولان الطعام في المنزل ذي السقف الأزرق.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,66 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
+<p dir="rtl">وبحلول عيد ميلاد ماقزوي العاشر، أهداه توماس قصة جديدة. كانت القصة تحكي عن ولد نشأ في قرية ليصبح بعد ذلك لاعب كرة قدم مشهور. قرأ توماس القصة مرات عديدة لماقزوي، ثم قال له في أحد الأيام: &quot;أظن أن الوقت قد حان لتذهب إلى المدرسة وتتعلم القراءة، ما رأيك؟&quot; وأوضح له بأنه يعرف مكانا يمكن لأطفال الشوارع أن يقيموا فيه ويرتادوا المدرسة.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
+<p dir="rtl">فكر ماقزوي في هذا المكان الجديد وفي الذهاب إلى المدرسة وتساءل: &quot;ماذا لو كان خاله على حق حينما نعته بالغبي؟ لن يستطيع تعلم أي شيء عند ذلك. ماذا لو قاموا بضربه في ذاك المكان الجديد؟&quot; شعر ماقزوي بالخوف وقال محدثا نفسه: &quot;قد يكون من الأفضل لي مواصلة العيش في الشارع&quot;.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
+<p dir="rtl">أعلم ماقزوي توماس بمخاوفه. وبمرور الوقت طمأن توماس الصبي بأن الحياة قد تكون أفضل في المكان الجديد.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
+<p dir="rtl">لذا انتقل ماقزوي للعيش بغرفة في منزل ذي سقف أخضر. تقاسم الغرفة مع صبيين آخرين. كان المنزل يضم عشرة أولاد إلى جانب العمة سيسي وزوجها وثلاثة كلاب وقطة وعنزة عجوز.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
+<p dir="rtl">بدأ ماقزوي الدراسة. كانت صعبة في البدء، وكان عليه أن يعمل جاهدا لتدارك ضعفه. مرت عليه لحظات يأس أراد فيها أن يغادر المكان لكنه كان في كل مرة يتذكر قائد الطائرة ولاعب كرة القدم اللذين تحكي عنهما القصص، وعقد العزم على ألا يغادر المدرسة وأن يواصل تعليمه.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
+<p dir="rtl">وفي يوم من الأيام، كان ماقزوي جالسا في فناء المنزل ذي السقف الأخضر يقرأ قصة من المدرسة عندما أقبل توماس وجلس لجانبه سائلا: &quot;عما تتحدث القصة؟&quot; رد ماقزوي قائلا: &quot;إنها تحكي عن صبي أصبح مدرسا&quot; سأل توماس: &quot;ما اسم هذا الصبي؟&quot; أجاب ماقروي مبتسما: &quot;اسمه ماقزوي&quot;.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ماقزوي-1">ماقزوي</h2>
+<strong>Text:</strong> Lesley Koyi<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/magozwe-0'>here</a>
 <p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
